SERVER-28688 ReplicationCoordinatorExternalStateImpl::shutdown() performs database reads/writes outside lock

(cherry picked from commit bc135d00323ccbe35d7ba9030b3c20f7d28b34ad)